# rustpress-plugin-rustseo

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
assets/css/: admin.css
assets/js/: admin.js
migrations/: 001_create_tables.sql
src/: lib.rs  plugin.rs  settings.rs
src/admin/: analysis.rs  dashboard.rs  mod.rs  redirects.rs  settings.rs  sitemaps.rs
src/handlers/: analysis.rs  dashboard.rs  meta.rs  mod.rs  redirects.rs  robots.rs  schema.rs  settings.rs  sitemaps.rs
src/models/: analysis.rs  breadcrumb.rs  keyword.rs  meta.rs  mod.rs  redirect.rs  robots.rs  schema.rs  sitemap.rs  social.rs
src/services/: analysis.rs  meta.rs  mod.rs  redirect.rs  robots.rs  schema.rs  sitemap.rs
templates/admin/: dashboard.html  settings.html
